syntax = "proto3";

package temporal.api.enums.v1;

option go_package = "go.temporal.io/api/enums/v1;enums";
option java_package = "io.temporal.api.enums.v1";
option java_multiple_files = true;
option java_outer_classname = "CommandTypeProto";
option ruby_package = "Temporalio::Api::Enums::V1";
option csharp_namespace = "Temporalio.Api.Enums.V1";

// Whenever this list of command types is changed do change the function shouldBufferEvent in mutableStateBuilder.go to make sure to do the correct event ordering.
enum CommandType {
    COMMAND_TYPE_UNSPECIFIED = 0;
    COMMAND_TYPE_SCHEDULE_ACTIVITY_TASK = 1;
    COMMAND_TYPE_REQUEST_CANCEL_ACTIVITY_TASK = 2;
    COMMAND_TYPE_START_TIMER = 3;
    COMMAND_TYPE_COMPLETE_WORKFLOW_EXECUTION = 4;
    COMMAND_TYPE_FAIL_WORKFLOW_EXECUTION = 5;
    COMMAND_TYPE_CANCEL_TIMER = 6;
    COMMAND_TYPE_CANCEL_WORKFLOW_EXECUTION = 7;
    COMMAND_TYPE_REQUEST_CANCEL_EXTERNAL_WORKFLOW_EXECUTION = 8;
    COMMAND_TYPE_RECORD_MARKER = 9;
    COMMAND_TYPE_CONTINUE_AS_NEW_WORKFLOW_EXECUTION = 10;
    COMMAND_TYPE_START_CHILD_WORKFLOW_EXECUTION = 11;
    COMMAND_TYPE_SIGNAL_EXTERNAL_WORKFLOW_EXECUTION = 12;
    COMMAND_TYPE_UPSERT_WORKFLOW_SEARCH_ATTRIBUTES = 13;
    COMMAND_TYPE_PROTOCOL_MESSAGE = 14;
    COMMAND_TYPE_MODIFY_WORKFLOW_PROPERTIES = 16;
    COMMAND_TYPE_SCHEDULE_NEXUS_OPERATION = 17;
    COMMAND_TYPE_REQUEST_CANCEL_NEXUS_OPERATION = 18;
}
